# my_fastapi_app

./: .gitignore  README.md  csv_upload.py  main.py  model_training.py  pyproject.toml
models/: iris_model.pkl
